--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- New sticky button -->
     <button id="newStickyBtn" class="fab" aria-label="New Sticky">
       <span class="fabPlus">+</span>
-      <span class="fabLabel">New Sticky</span>
+      <span class="fabLabel">Create new sticky</span>
     </button>
   </main>
 
