--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Sticky Wall</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;800&family=Margarine&display=swap" rel="stylesheet">
@@ -9,20 +10,20 @@
 </head>
 <body>
 
-<div id="wall"></div>
+  <div id="wall"></div>
 
-<div id="picker" class="picker hidden">
-  <div class="chips">
-    <button data-color="yellow"></button>
-    <button data-color="blue"></button>
-    <button data-color="green"></button>
-    <button data-color="pink"></button>
-    <button data-color="gray"></button>
+  <div id="picker" class="picker hidden" aria-label="Pick a Color">
+    <div class="chips">
+      <button data-color="yellow" aria-label="Yellow"></button>
+      <button data-color="blue" aria-label="Blue"></button>
+      <button data-color="green" aria-label="Green"></button>
+      <button data-color="pink" aria-label="Pink"></button>
+      <button data-color="gray" aria-label="Gray"></button>
+    </div>
   </div>
-</div>
 
-<button id="newStickyBtn">＋ New Sticky</button>
+  <button id="newStickyBtn">＋ New Sticky</button>
 
-<script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
